# exploring_finance

./: .gitignore  README.md  pyproject.toml
example_codes/: autoencoder_update_to_predict.py  ipca_main_update.py  nn.py  nn_r2.py  penalized_linear_update.py  penalized_linear_update1.py  portfolio_analysis_update1.py  portfolio_analysis_update_autoencoder.py  portfolio_analysis_update_ipca.py  tree.py  tree_r2.py
individual_assignment/: LOOK_AHEAD_BIAS_AUDIT.md  METHODOLOGY.md  STRATEGY.md  build_portfolio.py  build_portfolio.py.bak  build_portfolio_v2.py  download_macro.py  download_wrds_ratios.py  ipca_torch.py  main.py  test_pipeline.py
individual_assignment/data_we/: macro_data_goyal_enhanced.csv  macro_data_goyal_initial.csv  mkt_ind.csv  mma_sample_enhanced.csv  mma_sample_v2.csv
individual_assignment/output/: decile_returns.csv  monthly_holdings.csv  oos_r2_by_year.csv  oos_r2_overall.csv  portfolio_summary.csv  predictions.csv  sharpe_grid.csv  strategy_returns.csv  xgb_feature_importance.csv
individual_assignment/output_last_day/: decile_returns.csv  monthly_holdings.csv  monthly_trades.csv  oos_r2_by_year.csv  oos_r2_overall.csv  portfolio_stats.csv  portfolio_summary.csv  predictions.csv  sharpe_grid.csv  top10_holdings.csv  top10_profitable_longs.csv  worst10_longs.csv  xgb_feature_importance.csv  yearly_performance.csv
lab1/: build_portofolio.py  nn_main.py
lab2/: best_model_ae.pt  download_data.py  ipca_classes_update.py  main_autoencoder.py
output/: monthly_holdings.csv  monthly_trades.csv  portfolio_summary.csv
(+66 files in other folders)
