
[project]
name = "ezpzz-finance"
version = "0.1.0"
description = "FINE course lab — ML portfolios (Module 2)"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3.0",
    "xgboost>=3.0.0",
    "torch>=2.0.0,<2.6",
    "statsmodels>=0.14.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.10.8",
    "gdown>=5.0.0",
]
